# benefits-translation-improver

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
apps-script/: .gitignore  README.md  package-lock.json  package.json
apps-script/src/: archive.js  config.js  drive.js  main.js  translation.js  translationApp.js  utils.js
evals/: README.md  prompt.txt  promptfooconfig.yaml
frontend/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: App.jsx  index.css
src/: cli.py
src/lib/: llm_tools.py
src/mcp/clients/: translation_agent.py
src/mcp/resources/: unemployment_insurance_glossary.txt
src/mcp/servers/: llm_translation_server.py  machine_translation_server.py  unemployment_insurance_context_documents.py
src/tasks/: translate.py
src/translation_services/: amazon_bedrock.py  amazon_translate.py
tests/translation_services/: test_amazon_translate.py
