[project]
name = "translation-poc"
version = "0.1.0"
description = ""
authors = [
    {name = "tyler",email = "1851017+TylerHendrickson@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
boto3 = "^1.37.0"
structlog = "^25.1.0"
pydantic = "^2.10.6"
langcodes = "^3.5.0"
typer = "^0.15.2"
mcp = "^1.9.4"
langchain-mcp-adapters = "^0.1.7"
langchain-anthropic = "^0.3.15"

[tool.poetry.group.dev.dependencies]
ipython = "^8.32.0"
pytest = "^8.3.4"
ruff = "^0.9.7"
pytest-cov = "^6.0.0"
mypy = "^1.15.0"
boto3-stubs = {extras = ["essential", "translate", "bedrock", "bedrock_runtime"], version = "^1.37.0"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
